# branch

./: .gitignore  LICENSE.txt  Makefile  README.md  com.github.mrvladus.Branch.json  meson.build  test.py
data/: com.github.mrvladus.Branch.desktop.in  meson.build
data/icons/: meson.build
po/: POTFILES  meson.build
src/: add_dialog.py  application.py  branch.py  data.py  meson.build  repo_page.py  settings.py  utils.py
src/resources/: add_dialog.ui  branch.gresource.xml  meson.build  repo.ui  window.ui
src/resources/ui/: repo_page.ui  settings.ui
